--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Western stories'
 - !lcc 'PR'
+- GITenberg
 title: Kiddie the Scout
 url: http://www.gutenberg.org/ebooks/23924
